--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid sticky-top">
     <div class="container">
       <div class="row">
         <div class="col-3">
             <h1 class="logo-heading">Fun Bus</h1>
         </div>
-        <div class="col-9">
+        <div class="col-9 d-flex align-items-center flex-row-reverse">
           <nav class="nav">
             <a class="nav-link active" href="#">Home</a>
             <a class="nav-link" href="#">About Us</a>
@@ -41,26 +41,26 @@
         </div>
     </div>
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-sm-12 mt-4">
         <h2>Welcome To Fun Bus!</h2>
         <p>
             Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.
         </p>
       </div>
     </div>
-    <div class="row">
+    <div class="row mt-4">
       <div class="col-sm-6">
         <h2>Let's Go!</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p> 
         <p>Pretty simple traveling fun WordPress wanderlust darn simple organized. WordPress travelblogger simple WordPress cute whimsical organized. Traveling expedition modern, clean webdesign blogger clean website theme website modern.</p>
       </div>
       <div class="col-sm-6">
-          <img src="img/adventure.jpg" class="img-fluid" alt="Let's go on adventure!">
+          <img src="img/adventure.jpg" class="img-fluid rounded" alt="Let's go on adventure!">
       </div>
     </div>
-    <div class="row">
+    <div class="row mt-3">
         <div class="col-sm-6">
-            <img src="img/fun.jpg" class="img-fluid" alt="Lets have fun!">
+            <img src="img/fun.jpg" class="img-fluid rounded" alt="Lets have fun!">
         </div>
         <div class="col-sm-6">
           <h2>Adventure Awaits</h2>
@@ -68,7 +68,39 @@
           <p>Pretty simple traveling fun WordPress wanderlust darn simple organized. WordPress travelblogger simple WordPress cute whimsical organized. Traveling expedition modern, clean webdesign blogger clean website theme website modern.</p>
         </div>
     </div>
-    <div class="row">
+     <!-- JavaScript Component: Carousel -->
+     <div class="row">
+        <div class="col-sm-12">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="img/beach1.jpg/" alt="Beach">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/mountain.jpg/" alt="Mountain">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/island.jpg/" alt="Island">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+        </div>
+      </div>
+      <!-- end Carousel-->
+    <div class="row mt-3">
       <div class="col-sm-12">
         <h2>Destinations</h2>
         <table class="table table-striped">
@@ -103,63 +135,81 @@
         </table>
       </div>
     </div>
-    <div class="row">
+    <div class="row mt-5">
       <div class="col-sm-4">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <button type="button" class="btn btn-info">Get More Info</button>
+        <button type="button" class="btn btn-info" data-toggle="tooltip" data-placement="bottom" title="BEACH BEACH LET'S GO TO THE BEACH">Get More Info</button>
       </div>
       <div class="col-sm-4">
         <h4>Mountain Excursion</h4>
         <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <button type="button" class="btn btn-info">Get More Info</button>
+        <button type="button" class="btn btn-info" data-toggle="tooltip" data-placement="bottom" title="EXCURSIONS ARE EXCITING">Get More Info</button>
       </div>
       <div class="col-sm-4">
         <h4>Island Getaway</h4>
         <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <button type="button" class="btn btn-info">Get More Info</button>
+        <button type="button" class="btn btn-info" data-toggle="tooltip" data-placement="bottom" title="ISLANDS ARE THE BOMB">Get More Info</button>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-8">
+    <div class="row mt-5">
+      <div class="col-sm-8 mt-3">
         <h4>Before You Go...</h4>
         <p>Excursion clean modern design wanderlust, traveler wanderlust expedition WordPress whimsical WordPress website whimsical wanderlust. Blogger wanderlust modern modern design modern colorful simple clean. Wanderlust Travel adventure, traveler excursion wanderlust website WordPress adventure darn website darn.</p>
       </div>
-      <div class="col-sm-4">
-        <h4>Don't Forget These!</h4>
-        <ul class="list-group">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Morbi leo risus</li>
-          <li class="list-group-item">Porta ac consectetur ac</li>
-          <li class="list-group-item">Vestibulum at eros</li>
-        </ul>
+      <div class="col-sm-4 mt-3">
+          <div class="dropdown mt-3">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <h3>Don't Forget These!</h3>              
+            </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Cras justo odio</a>
+                <a class="dropdown-item" href="#">Dapibus ac facilisis in</a>
+                <a class="dropdown-item" href="#">Morbi leo risus</a>
+                <a class="dropdown-item" href="#">Porta ac consectetur ac</a>
+                <a class="dropdown-item" href="#">Vestibulum at eros</a>
+              </div>
+            </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-sm-12">
         <form>
+            <div class="form-group">
           <label for="name">Name</label>
           <input id="name" type="text" class="form-control" placeholder="Name">
+            </div>
+            <div class="form-group">
           <label for="phone">Phone</label>
           <input id="phone" type="phone" class="form-control" placeholder="Phone">
-          <div class="form-check">
+            </div>
+            <div class="form-group">
+          <label for="email">Email</label>
+          <input id="email" type="email" class="form-control" placeholder="Email">
+            </div>
+          <div class="form-check mt-1">
             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
             <label class="form-check-label" for="exampleRadios1">
               Beach
             </label>
           </div>
-          <div class="form-check">
+          <div class="form-check mt-1">
             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
             <label class="form-check-label" for="exampleRadios2">
               Mountain
             </label>
           </div>
-          <button type="submit" class="btn btn-info">Let's Travel</button>
+          <div class="form-check mt-1">
+              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+              <label class="form-check-label" for="exampleRadios1">
+                Island
+              </label>
+            </div>
+          <button type="submit" class="btn btn-info mt-2" data-toggle="tooltip" data-placement="right" title="BOOK NOW">Let's Travel</button>
         </form>
       </div>
     </div>
-    <div class="row footer">
+    <div class="row footer mt-4 mb-2">
       <div class="col-sm-12">
         Copyright Fun Bus 2018
       </div>
