--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/beach1.jpg/" alt="Beach">
+                    <img class="d-block w-100" src="img/slider-1.jpg" alt="Path">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="img/mountain.jpg/" alt="Mountain">
+                    <img class="d-block w-100" src="img/slider-2.jpg" alt="Mountain">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="img/island.jpg/" alt="Island">
+                    <img class="d-block w-100" src="img/slider-3.jpg" alt="Boat">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -159,7 +159,7 @@
       </div>
       <div class="col-sm-4 mt-3">
           <div class="dropdown mt-3">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <button class="btn btn-secondary dropdown-toggle custom-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <h3>Don't Forget These!</h3>              
             </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -210,7 +210,7 @@
       </div>
     </div>
     <div class="row footer mt-4 mb-2">
-      <div class="col-sm-12">
+      <div class="col-sm-12 d-flex justify-content-center">
         Copyright Fun Bus 2018
       </div>
     </div>
